2005-12-22  Marc Singer  <elf@buici.com>

	* src/drivers-lh/drv-clcdc.c: Common LCD driver for Sharp LH
	parts.

	* src/arch-arm/entry/mmu-alloc.c (alloc_uncached): Function to
	allocate memory that won't be cached even when the MMU is enabled.

2005-12-19  Marc Singer  <elf@buici.com>

	* src/arch-arm/entry/mmu.c: Service to enable and disable the MMU.
	This makes the boot loader execute much faster than without.

	* src/mach-lh7952x/serial.c (lh7952x_serial_release): Added a
	release function so that serial data in the FIFO is flushed. 

	* src/mach-lh7a40x/serial.c (lh7a40x_serial_release): Added a
	release function so that serial data in the FIFO is flushed.

2005-12-16  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/lh7a40x.h: Added an overclocking mode.

	* src/mach-lh7a40x/initialize.c: Added more explicit macros to
	handle bus clocking modes.  Also, we've switched to the
	synchronous bus mode as the default.

	* src/mach-lh7a40x/lh7a40x.h: Added more explicit macros to handle
	bus clocking modes. 

	* src/drivers/drv-mem.c: Added memlimit command so that we can
	constrain the amount of memory that the Linux kernel sees.  It's a
	handy debug feature.

2005-11-18  Marc Singer  <elf@buici.com>

	* src/drivers/drv-nor-cfi.c: Added option to inhibit the NOR CFI
	buffered write code, for lnode80.
 
	* src/mach-lh7952x/Kconfig: Added lnode80, patch from Dave Anders.

2005-11-07  Marc Singer  <elf@buici.com>

	* Makefile: Rolling release for 79525 and for a fix to the
	emac79524 driver.

2005-10-08  Marc Singer  <elf@buici.com>

	* src/net/ethernet.c (arp_terminate): Added a check for ^C in the
	ARP termination function.

	* src/net/tftp.c (tftp_open): Reorganized the tftp open sequence
	in case ARP for the TFTP server has yet to be achieved.  This was
	a crash bug.
 
2005-10-07  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/Kconfig: Start of changes for the kev79525.

	* src/arch-arm/entry/apex.lds.S: Fixed the drv-mem probe code to
	be reliable and safe.
