@@ -57,8 +57,8 @@ static void cpuinfo_report (void)
   __asm volatile ("mrc p15, 0, %0, c2, c0, 0" : "=r" (ttbl));
   __asm volatile ("mrc p15, 0, %0, c3, c0, 0" : "=r" (domain));
   __asm volatile ("mrs %0, cpsr"	   : "=r" (cpsr));
-  printf ("  cpu:      id 0x%lx    ctrl 0x%lx  cpsr 0x%lx\n"
-	  "          ttbl 0x%lx  domain 0x%lx  cache 0x%lx\n"
+  printf ("  cpu:      id 0x%08lx    ctrl 0x%08lx   cpsr 0x%08lx\n"
+	  "          ttbl 0x%08lx  domain 0x%08lx  cache 0x%08lx\n"
 	  "          chipid 0x%x %s\n",
 	  id, ctrl, cpsr, ttbl, domain, cache, (unsigned) csc, sz);
 
